--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/flexsearch": "^0.7.6",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "flexsearch": "^0.6.2",
+    "fuse.js": "^7.1.0"
   }
 }
