--- a/package.json
+++ b/package.json
@@ -12,16 +12,20 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/flexsearch": "^0.7.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "flexsearch": "^0.6.2",
-    "fuse.js": "^7.1.0"
+    "fuse.js": "^7.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
